# StudyOntology

./: .gitignore  README.md  flake.nix  pyproject.toml  schema.yaml
lib/StudyOntology/: lib.py
nix/: overlay.nix  shell.nix
