[build-system]
requires = [
  "setuptools>=80.9.0",
  "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "StudyOntology"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
  "linkml-runtime",
  "pydantic",
  "linkml"
]

[tool.setuptools.packages.find]
where = ["lib"]
